// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TagLabel component snapshot type tag 1`] = `
<span
  className="pf-v6-c-label pf-m-orange pf-m-outline label tag"
>
  <span
    className="pf-v6-c-label__content"
  >
    <span
      className="pf-v6-c-label__text"
    >
      Tech Preview
    </span>
  </span>
</span>
`;

exports[`TagLabel component snapshot type version 1`] = `
<span
  className="pf-v6-c-label pf-m-blue pf-m-outline label version"
>
  <span
    className="pf-v6-c-label__content"
  >
    <span
      className="pf-v6-c-label__text"
    >
      latest
    </span>
  </span>
</span>
`;
